# ai-agent-platform

./: .dev_env  .flake8  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  get_unstructured_lib_ready.py  pyproject.toml  pytest.ini
.github/workflows/: test.yml
app/: config.py  server.py
app/api/: api.py
app/api/endpoints/: agent-analytics.py  agent-automation.py  agent-engineering.py  agent-finance.py  agent-general.py  agent-hr.py  agent-operations.py  agent-procurement.py  agent-realestate.py  agent-workflow.py
app/chain/: answer_grader.py  documents_summarizer.py  file_gen_assistant.py  file_generator.py  filename_generator.py  hallucination_grader.py  moderator.py  process_file.py  purge_files.py  query_classifier.py  query_image_gen_rewriter.py  query_rag_rewriter.py  query_web_search_rewriter.py  rag_payload_rewriter.py  retrieval_grader.py  topic_summarizer.py  utils.py
app/chain/agent-analytics/: process_kb_file.py  process_user_file.py  purge_kb_files.py  purge_user_files.py  qa_bot.py  query_classifier.py
app/chain/agent-automation/: process_kb_file.py  process_user_file.py  purge_kb_files.py  purge_user_files.py  qa_bot.py
app/chain/agent-engineering/: process_kb_file.py  process_user_file.py  purge_kb_files.py  purge_user_files.py  qa_bot.py
app/chain/agent-finance/: finance_info_gatherer.py  process_kb_file.py  process_user_file.py  purge_kb_files.py  purge_user_files.py  qa_bot.py
app/chain/agent-general/: audio_bot.py  avatar_process_kb_file.py  avatar_purge_kb_files.py  avatar_qa_bot.py  avatar_query_rag_rewriter.py  avatar_response_generator.py  process_kb_file.py  process_user_file.py  purge_kb_files.py  purge_user_files.py  qa_bot.py
app/chain/agent-hr/: process_kb_file.py  process_user_file.py  purge_kb_files.py  purge_user_files.py  qa_bot.py
app/chain/agent-operations/: process_kb_file.py  process_user_file.py  purge_kb_files.py  purge_user_files.py  qa_bot.py
app/chain/agent-procurement/: process_kb_file.py  process_user_file.py  purge_kb_files.py  purge_user_files.py  qa_bot.py  query_classifier.py  sow_info_gatherer.py
app/chain/agent-realestate/: process_kb_file.py  process_user_file.py  purge_kb_files.py  purge_user_files.py  qa_bot.py
app/chain/agent-workflow/: process_kb_file.py  process_user_file.py  purge_kb_files.py  purge_user_files.py  qa_bot.py  query_classifier.py
app/embedding_model/: azure_emb.py
app/file_template/: README.md
app/graph/: file_gen_graph_node.py  rag_graph_node.py  response_graph_node.py  utils.py  utils_graph_edge.py  utils_graph_node.py  web_search_graph_node.py
app/graph/agent-analytics/: graph_bot.py  graph_edge.py  graph_node.py
app/graph/agent-automation/: graph_bot.py
app/graph/agent-engineering/: graph_bot.py
app/graph/agent-finance/: finance_edge.py  finance_node.py  graph_bot.py
app/graph/agent-general/: audio_graph_bot.py  avatar_graph_bot.py  graph_bot.py
app/graph/agent-hr/: graph_bot.py
app/graph/agent-operations/: graph_bot.py
app/graph/agent-procurement/: graph_bot.py  graph_edge.py  graph_node.py
app/graph/agent-realestate/: graph_bot.py
app/graph/agent-workflow/: graph_bot.py  graph_edge.py  graph_node.py
app/helpers/: security.py  utils.py
app/llm_model/: azure_llm.py
app/memory/: chat_history_snowflake.py  checkpoint_factory.py  checkpointer_snowflake.py  session_factory.py
app/model/: file_gen_model.py  grader_model.py  ms_graph_model.py  send_email_model.py  sql_snowflake_model.py  vectordb_file_model.py
app/model/agent-analytics/: bot_model.py
app/model/agent-automation/: bot_model.py
app/model/agent-engineering/: bot_model.py
app/model/agent-finance/: bot_model.py
app/model/agent-general/: bot_model.py
app/model/agent-procurement/: bot_model.py
app/model/agent-workflow/: bot_model.py
app/prompt/: base_enterprise.py  query_classifier.py  response_generator.py
app/prompt/agent-analytics/: bot.py
app/prompt/agent-automation/: bot.py
app/prompt/agent-engineering/: bot.py
app/prompt/agent-finance/: bot.py
app/prompt/agent-general/: avatar_bot.py  bot.py
app/prompt/agent-hr/: bot.py
app/prompt/agent-operations/: bot.py
app/prompt/agent-procurement/: bot.py
app/prompt/agent-realestate/: bot.py
app/prompt/agent-workflow/: bot.py
app/tools/: azure_openai_image_gen_tool.py  azure_send_email_tool.py  document_gen_tool.py  pdf_gen_tool.py  snowflake_sql_tool.py  sql_chart_gen_tool.py  user_profile_ms_graph_tool.py  web_search_tool.py
app/tools/agent-analytics/: sql_chart_gen_tool.py  sql_query_tool.py
app/tools/agent-general/: file_gen_tool.py  ms_graph_tool.py
app/tools/agent-procurement/: doc_gen_tool.py  send_email_tool.py
app/tools/agent-workflow/: sql_query_tool.py
app/tools/tool_wrapper/: azure_openai_image_gen_api_wrapper.py  azure_send_email_api_wrapper.py  document_gen_tool_wrapper.py  pdf_gen_tool_wrapper.py  snowflake_sql_tool_wrapper.py  sql_chart_gen_tool_wrapper.py  user_profile_ms_graph_tool_wrapper.py
app/vector_db/: agent-analytics.py  agent-automation.py  agent-engineering.py  agent-finance.py  agent-general.py  agent-hr.py  agent-operations.py  agent-procurement.py  agent-realestate.py  agent-workflow.py  qdrant_db.py  utils.py
docs/: ARCHITECTURE.md
docs/sample-knowledge-base/: README.md
graphs/agent-analytics/: AnalyticsAgent-Graph.drawio
graphs/agent-engineering/: EngineeringAgent-Graph.drawio
graphs/agent-finance/: FinanceAgent-Graph.drawio
graphs/agent-general/: GeneralAgent-Avatar-Graph.drawio  GeneralAgent-Graph.drawio
graphs/agent-hr/: HRAgent-Graph.drawio
graphs/agent-operations/: OperationsAgent-Graph.drawio
graphs/agent-procurement/: ProcurementAgent-Graph.drawio
graphs/agent-workflow/: WorkflowAgent-Graph.drawio
tests/: __init__.py  conftest.py
tests/integration/: test_agent_workflow.py
tests/unit/: test_utils.py
tests/unit/api/: test_agent_endpoints.py  test_health.py
tests/unit/chain/: test_query_classifier.py  test_retrieval_grader.py
tests/unit/model/: test_bot_model.py
tests/unit/vector_db/: test_utils.py
(+1 files in other folders)
